More CSS improvements, fixed spacing issue with navbar links

--- a/client/narrow.css
+++ b/client/narrow.css
@@ -13,10 +13,6 @@ nav {
     border-bottom-right-radius: 4px;
 }
 
-nav:nth-child(1) {
-	padding-left: 25px;
-}
-
 .navlink {
 	padding: 5px;
 	padding-top: 12px;
