--- a/client/wide.css
+++ b/client/wide.css
@@ -7,15 +7,10 @@ html, body {
 }
 
 nav {
-	width: 674px;
 	height: 50px;
 	background-color: #92BCEA;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
-}
-
-nav:nth-child(1) {
-	padding-left: 25px;
 }
 
 .navlink {
